Fix Preview Layout overflow

--- a/assets/css/apps/mail/cmps/MailPreview.css
+++ b/assets/css/apps/mail/cmps/MailPreview.css
@@ -3,7 +3,7 @@
 .mail-preview {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: auto 200px 1fr auto;
+    grid-template-columns: auto 200px 1fr 85px;
     align-items: center;
     background-color: #f2f6fc;
     box-shadow: rgba(100, 121, 143, 0.12) 0px -1px 0px 0px inset;
@@ -30,6 +30,26 @@
     margin-inline-start: 10px;
 }
 
+.mail-preview section {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    min-width: 230px;
+}
+
+.mail-preview .mail-subject {
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
+
+.mail-preview .mail-body {
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis; 
+    flex: 1;
+}
+
 .mail-preview .mail-sentAt {
     justify-self: end;
     padding-inline-end: 20px;
@@ -43,19 +63,6 @@
     font-weight: 300;
     color: #5f6368;
 }
-
-.mail-preview .mail-subject {
-    white-space: nowrap;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-}
-
-.mail-preview .mail-body {
-    white-space: nowrap;
-    overflow-x: hidden;
-    text-overflow: ellipsis; 
-}
-
 
 .mail-preview .un-read-txt {
     font-weight: 700;
